# gouqi-mcp-server

./: .gitignore  .npmignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  CREATE_ISSUE_EXAMPLES.md  Cargo-dev.toml  Cargo.toml  DEVELOPMENT.md  IMPLEMENTATION_COMPLETE.md  LICENSE  METADATA_WORKFLOW.md  PUBLISHING.md  README.md  SAFE_CUSTOM_FIELDS_GUIDE.md  SAFE_SPRINT_MANAGEMENT_ANALYSIS.md  SPRINT_LIFECYCLE_REGISTRATION.md  comprehensive_test.sh  package.json  pytest.ini  quick_test.sh  requirements-dev.txt  setup-dev-env.sh  simple_direct_test.sh  simple_test.sh  test_create_issue.sh  test_search.py  test_server.py  test_tools.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  npm-publish.yml
jira-mcp-server/: Cargo.toml
jira-mcp-server/src/: cache.rs  config.rs  error.rs  jira_client.rs  lib.rs  main.rs  semantic_mapping.rs
jira-mcp-server/src/tools/: add_comment.rs  assign_issue.rs  bulk_operations.rs  components.rs  create_issue.rs  download_attachment.rs  get_create_metadata.rs  get_custom_fields.rs  issue_details.rs  issue_links.rs  issue_relationships.rs  labels.rs  list_attachments.rs  mod.rs  rate_limiter.rs  search_issues.rs  sprints.rs  todo_tracker.rs  transitions.rs  update_custom_fields.rs  update_description.rs  upload_attachment.rs  user_issues.rs
jira-mcp-server/tests/: test_ai_agent_scenarios.rs  test_attachments.rs  test_bulk_operations.rs  test_bulk_rate_limits.rs  test_bulk_validation.rs  test_issue_links.rs  test_issue_operations.rs  test_labels_and_components.rs  test_rate_limit_comparison.rs  test_real_jira_integration.rs  test_retry_threshold.rs  test_search_issues.rs  test_sprint_lifecycle.rs  test_sprints.rs  test_todo_tracker.rs  test_user_issues.rs  verify_link_created.rs
jira-mcp-server/tests/common/: mod.rs
npm/: .npmignore  index.js  install.js  package.json  run.js  uninstall.js
platform-packages/darwin-arm64/: index.js  package.json
platform-packages/darwin-x64/: index.js  package.json
platform-packages/linux-x64/: package.json
platform-packages/win32-x64/: index.js  package.json
scripts/: postinstall.js  prepare-dist.js  test-integration.js
template-mcp-server/: Cargo.toml
template-mcp-server/src/: lib.rs  main.rs
tests/: README.md  TESTING_STATUS.md  conftest.py  requirements.txt  test_issues.py  test_search.py  test_user_issues.py
