# Development version using local paths
# Copy this to Cargo.toml when developing with local framework

[workspace]
members = [
  "jira-mcp-server"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
pulseengine-mcp-macros = {version = "0.10.1"}
pulseengine-mcp-protocol = {version = "0.10.1"}
# PulseEngine MCP Framework - Published v0.10.1
pulseengine-mcp-server = {version = "0.10.1", features = ["stdio-logging"]}
pulseengine-mcp-transport = {version = "0.10.1"}
rand = "0.8"
schemars = {version = "0.8", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
# Core dependencies for MCP servers
tokio = {version = "1.0", features = ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
