[[bin]]
name = "jira-mcp-server"
path = "src/main.rs"

[dependencies]
anyhow = {workspace = true}
async-trait = {workspace = true}
base64 = "0.22"
chrono = {version = "0.4", features = ["serde"]}
# JIRA integration
gouqi = {version = "0.15.1", features = ["async"]}
pulseengine-mcp-macros = {workspace = true}
pulseengine-mcp-protocol = {workspace = true}
pulseengine-mcp-server = {workspace = true}
pulseengine-mcp-transport = {workspace = true}
rand = "0.8"
schemars = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
# Error handling
thiserror = "2.0"
tokio = {workspace = true}
# Configuration
toml = "0.9"
tracing = {workspace = true}
tracing-subscriber = {workspace = true}

[lib]
name = "jira_mcp_server"
path = "src/lib.rs"

[package]
authors = ["JIRA MCP Team"]
description = "AI-friendly JIRA MCP server with semantic search capabilities"
edition = "2021"
keywords = ["mcp", "model-context-protocol", "jira", "search"]
license = "MIT"
name = "jira-mcp-server"
repository = "https://github.com/yourusername/jira-mcp-server"
version = "0.1.0"
